<resources>
    <string name="app_name">BinaryCalculator</string>
    <string name="title">Digital Logic Converter</string>
    <string name="help_message">Choose which number system you would like to convert from: </string>
    <string name="input_hint">Input your number here</string>
    <string name="spinner_prompt">Choose one</string>
    <string name="btn_text">Convert</string>
    <string name="conv1">Conv1</string>
    <string name="conv2">Conv2</string>
    <string name="conv3">Conv3</string>
    <string name="again">Convert Another Number</string>
</resources>
